# Public

./: README.md
Exercises/cpp/: VoidPointer  out
Exercises/python/: CMakeLists.txt  QuickSort.cpp
Python/: ErrExperiment.py
Python/BijectiveMap/: BijectiveMap.py  BijectiveMap2.py  BijectiveMapOLD.py
Python/CalculatorsAndHypotheses/: AverageDetGram.py  BoundingGaussianConditioned.py  BrownianBridge.py  CholeskyInequalities.py  ConcavityHypothesis.py  ConcavityPSD.py  ConditionedCovariance.py  ConditionedCovarianceConcave.py  CoordinateCollapse.py  CoordinateSwap.py  CoordsTransform.py  CorrelationHypothesis.py  CovarianceMaximizer.py  DeterminantsInequality.py  EigenPropertyPreserved.py  ElementwiseMonotone.py  Gtest.py  HadamardProduct.py  Ineq.py  InversesIdentity.py  L1LinfNorm.py  MaximalProjection.py  ParallelEvaluations.py  PositiveMatrixEquation.py  PositiveWeights.py  PositivityHypothesis.py  PreservesMonotonicity.py  ReusingSamples.py  SchurProductDet.py  SingularCovariance.py  SqrtMatrix.py  TotallyMonotoneHypothesis.py  TraceQuotient.py  Xi_Ci_Inequality.py  out.txt  r2.py
Python/ContinuousMethods/: 1.txt  2.txt  3.txt  4.txt  5.txt  Results.txt  TESTS.txt
Python/Convex/: Convex.py  Convex2.py
Python/Convolutions/: Convolutions.py  Convolutions2.py
Python/Covariance/: Covariance.py  Covariance2.py  Covariance3.py
Python/FixedPoint/: FixedPoint.py  FixedPointCandidate.py  FixedPointFixedCoordinates.py  FixedPointModifiable.py  FixedPointOptimal.py  (+2 more)
exercises/python/: Add.cpp  CMakeLists.txt  CallQuickSort.py
research/: ODE_model.py
(+290 files in other folders)
