cmake_minimum_required(VERSION 3.20)
project(exercise_in_python)
# add_executable(QuickSort QuickSort.cpp)

# add_executable(QuickSort QuickSort.cpp)
# target_include_directories(Hello PUBLIC /usr/include/python3.8)




# This file is currently not used.
# Instead, I complile the QuickSort.cpp file manually with -shared flag.
