cmake_minimum_required(VERSION 3.20)
project(exercise_in_python)
# add_executable(QuickSort QuickSort.cpp)

# add_executable(QuickSort QuickSort.cpp)
# target_include_directories(Hello PUBLIC /usr/include/python3.8)




# This file is currently not used.
# Instead, I complile the QuickSort.cpp file manually with command:
# c++ -O3 -Wall -shared -std=c++11 -fPIC $(python3 -m pybind11 --includes) QuickSort.cpp -o QuickSort$(python3-config --extension-suffix)
